
######################
#                    #
#      2022.04       #
#                    #
######################
New features and other changes:
1. Added function Uninstall-DamewareMiniRemoteControl.

######################
#                    #
#      2022.03       #
#                    #
######################
New features and other changes:
1. Fixed an issue that caused Get-RecentUser to not work.
2. Added Open-HomeAssistant function and HomeAssistant config item.
3. Added Open-LexmarkManagementConsole and Open-PrintRelease functions.
4. Added LMC and PrintRelease config items.
5. Changed Get-RecentUser so it ignores additional UMFD-x accounts.
6. Added Zoom config item and functions Copy-Zoom, Install-Zoom, and Uninstall-Zoom. Also added Zoom install to InstallRemote.ps1.
7. Changed Uninstall functions so they don't require an object and now default to the local computer.

######################
#                    #
#      2022.02       #
#                    #
######################
New features and other changes:
1. Removed print driver copy and installation functions.
2. In Set-RemediationValues added switches to SMB 1 and 2 commands to disable user prompts.
3. Made Install-WSTools multithreaded.
4. Added Splunk to AppNames config value.

######################
#                    #
#      2021.12       #
#                    #
######################
New features and other changes:
1. Added Windows Server 2022 21H2 support to Get-OperatingSystem and Get-HWInfo.
2. Added function Restore-WindowsUpdate.
3. Added numerous app service names to config (used in Stop-AppService.)
4. Added PSCustomObject snippet to powershell.json.
5. Added Enable-ServerManager.
6. Fixed some PSScriptAnalyzer issues.
7. Changed 200+ "new-object -typename PSObject"'s to [PSCustomObject] throughout module and sub-modules. Requires PowerShell v3. Runs faster and provides better functionality.
8. Removed a lot of excess code.